--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:title" content="Husk.fr - Desert road" />
 		<meta property="og:description" content="Technical showdown" />
 		<!--meta property="og:image" content="http://husk.fr/img/desert-road.png" /-->
-		<link href="desert-road.css" rel="stylesheet" type="text/css">
+		<link href="css/desert-road.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="main-container">
