--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="stars"></div>
 				<div class="stars-container">
 					<div class="sun"></div>
-					<div class="moon"></div>
+					<!--div class="moon"></div-->
 				</div>
 				<div class="mountains">
 					<div class="mountain"></div>
@@ -25,19 +25,19 @@
 					<div class="mountain"></div>
 				</div>
 			</div>
+			<div class="road">
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+			</div>
 			<div class="desert">
-				<div class="road">
-					<div class="line"></div>
-					<div class="line"></div>
-					<div class="line"></div>
-					<div class="line"></div>
-					<div class="line"></div>
-					<div class="line"></div>
-					<div class="line"></div>
-					<div class="line"></div>
-					<div class="line"></div>
-					<div class="line"></div>
-				</div>
 			</div>
 		</div>
 		<script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
