--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 					<div class="mountain"></div>
 					<div class="mountain"></div>
 					<div class="mountain"></div>
+					<div class="mountain"></div>
+					<div class="mountain"></div>
 				</div>
 			</div>
 			<div class="road">
@@ -38,6 +40,10 @@
 				<div class="line"></div>
 			</div>
 			<div class="desert">
+			</div>
+			<div class="speed-buttons">
+				<div class="speedup"></div>
+				<div class="slowdown"></div>
 			</div>
 		</div>
 		<script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
