add a little moving cactus :)

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 				<div class="line"></div>
 				<div class="line"></div>
 			</div>
-			<div class="desert">
+			<div class="desert">			
 			</div>
+			<div class="cactus"></div>	
 			<div class="speed-buttons">
 				<div class="speedup"></div>
 				<div class="slowdown"></div>
