--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
 					<div class="mountain"></div>
 					<div class="mountain"></div>
 				</div>
+				<div class="cloud-container">
+					<div class="cloud">
+						<div class="cloud-bubble cloud-bubble1"></div>
+						<div class="cloud-bubble cloud-bubble2"></div>
+						<div class="cloud-bubble cloud-bubble3"></div>
+						<div class="cloud-bubble cloud-bubble4"></div>
+						<div class="cloud-bubble cloud-bubble5"></div>
+					</div>
+				</div>
+				<!--div class="cloud-container little-cloud">
+					<div class="cloud">
+						<div class="cloud-bubble cloud-bubble1"></div>
+						<div class="cloud-bubble cloud-bubble2"></div>
+						<div class="cloud-bubble cloud-bubble3"></div>
+						<div class="cloud-bubble cloud-bubble4"></div>
+						<div class="cloud-bubble cloud-bubble5"></div>
+					</div>
+				</div-->
 			</div>
 			<div class="road">
 				<div class="line"></div>
@@ -41,7 +59,8 @@
 			</div>
 			<div class="desert">			
 			</div>
-			<div class="cactus"></div>	
+			<div class="cactus cactus1"></div>	
+			<div class="cactus cactus2"></div>	
 			<div class="speed-buttons">
 				<div class="speedup"></div>
 				<div class="slowdown"></div>
