--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 				<div class="line"></div>
 				<div class="line"></div>
 			</div>
+			<div class="car-container">
+				<img class="car" src="img/car-back.svg"/>
+			</div>
 			<div class="desert">			
 			</div>
 			<div class="cactus cactus1"></div>	
