improved car animation

--- a/index.html
+++ b/index.html
@@ -59,6 +59,28 @@
 			</div>
 			<div class="car-container">
 				<img class="car" src="img/car-back.svg"/>
+				<div class="smoke left">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="smoke right">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
 			</div>
 			<div class="desert">			
 			</div>
