--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<div class="main-container">
 			<div class="sky">
-				<div class="stars"></div>
+				<!--div class="stars"></div-->
 				<div class="stars-container">
 					<div class="sun"></div>
 					<!--div class="moon"></div-->
