new mountains and new stars

--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
 	<body>
 		<div class="main-container">
 			<div class="sky">
-				<!--div class="stars"></div-->
+				<div class="stars">
+					<div class="large"></div>
+					<div class="medium"></div>
+					<div class="small"></div>
+				</div>
 				<div class="stars-container">
 					<div class="sun"></div>
 					<!--div class="moon"></div-->
 				</div>
-				<div class="mountains">
-					<div class="mountain"></div>
-					<div class="mountain"></div>
-					<div class="mountain"></div>
-					<div class="mountain"></div>
-					<div class="mountain"></div>
-				</div>
+				<div class="mountains"></div>
 				<div class="cloud-container">
 					<div class="cloud">
 						<div class="cloud-bubble cloud-bubble1"></div>
