--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 				<div class="speedup"></div>
 				<div class="slowdown"></div>
 			</div>
+			<div class="help-me">?</div>
+			<div class="help-bubble help-1">
+				<p>You can turn left and right with the arrow keys</p>
+				<div class="arrow-keys">
+					<div class="arrow-key left">◀</div>
+					<div class="arrow-key right">▶</div>
+				</div>
+			</div>
 		</div>
 		<script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
 		<script type="text/javascript" src="js/desert-road.js"></script>
