--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 					<div class="arrow-key right">▶</div>
 				</div>
 			</div>
+			<div class="help-bubble reversed help-2">
+				<p>You can tell the sun to go to bed</p>
+			</div>
 		</div>
 		<script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
 		<script type="text/javascript" src="js/desert-road.js"></script>
