open graph image meta + help message

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta property="og:url" content="https://husk.fr/desert-road" />
 		<meta property="og:title" content="Husk.fr - Desert road" />
 		<meta property="og:description" content="Technical showdown" />
-		<!--meta property="og:image" content="http://husk.fr/img/desert-road.png" /-->
+		<meta property="og:image" content="http://husk.fr/img/desert-road.png" />
 		<link href="css/desert-road.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
@@ -97,7 +97,7 @@
 				</div>
 			</div>
 			<div class="help-bubble reversed help-2">
-				<p>You can tell the sun to go to bed</p>
+				<p>You can tell the sun to go to bed by touching the sky</p>
 			</div>
 		</div>
 		<script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
