--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta property="og:url" content="https://husk.fr/desert-road" />
 		<meta property="og:title" content="Husk.fr - Desert road" />
 		<meta property="og:description" content="Technical showdown" />
-		<meta property="og:image" content="http://husk.fr/img/desert-road.png" />
+		<meta property="og:image" content="https://husk.fr/img/desert-road.png" />
 		<link href="css/desert-road.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
