--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Desert road</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+		<title>Husk.fr - Desert road</title>
+		<meta name="description" content="Technical showdown" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://husk.fr/desert-road" />
