improved help messages and added JS doc

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
 					<span></span>
 					<span></span>
 				</div>
+				<div class="help-bubble help-car">
+					<p>You can turn left and right with the arrow keys</p>
+					<div class="arrow-keys">
+						<div class="arrow-key left">◀</div>
+						<div class="arrow-key right">▶</div>
+					</div>
+				</div>
 			</div>
 			<div class="desert">			
 			</div>
@@ -90,14 +97,8 @@
 				<div class="slowdown"></div>
 			</div>
 			<div class="help-me">?</div>
-			<div class="help-bubble help-1">
-				<p>You can turn left and right with the arrow keys</p>
-				<div class="arrow-keys">
-					<div class="arrow-key left">◀</div>
-					<div class="arrow-key right">▶</div>
-				</div>
-			</div>
-			<div class="help-bubble reversed help-2">
+			<div class="help-bubble reversed help-sky">
+				<div class="cursor-hand"></div>
 				<p>You can tell the sun to go to bed by touching the sky</p>
 			</div>
 		</div>
